syntax = "proto3";
package lavanet.lava.projects;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "projects/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/lavanet/lava/x/projects/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/lavanet/lava/projects/params";
  }
  // Queries a list of ShowProject items.
	rpc ShowProject(QueryShowProjectRequest) returns (QueryShowProjectResponse) {
		option (google.api.http).get = "/lavanet/lava/projects/show_project";
	}

// Queries a list of ShowDevelopersProject items.
	rpc ShowDevelopersProject(QueryShowDevelopersProjectRequest) returns (QueryShowDevelopersProjectResponse) {
		option (google.api.http).get = "/lavanet/lava/projects/show_developers_project";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryShowProjectRequest {
}

message QueryShowProjectResponse {
}

message QueryShowDevelopersProjectRequest {
}

message QueryShowDevelopersProjectResponse {
}

// this line is used by starport scaffolding # 3
